LingoHub Update :rocket:
Manual push by LingoHub User: Konrad Gusz.
Project: properties translations

Made with :heart: by https://lingohub.com

--- a/messages/messages_en_GB.properties
+++ b/messages/messages_en_GB.properties
@@ -13,7 +13,7 @@ quickbook.futuredates=Future dates
 quickbook.label=Quickbooking
 quickbook.length=Length
 quickbook.nosessions=No sessions are programmed for the selected cinema
-quickbook.note=Please note: the selected date may have changed to find a screening that matches your selection.
+quickbook.note=Please note\: the selected date may have changed to find a screening that matches your selection.
 quickbook.noteShort=Selected date may have changed to find a screening that matches your selection.
 quickbook.pickadate=Pick a date
 quickbook.screeningtype=Screening type
