--- a/messages/messages_pl_PL.properties
+++ b/messages/messages_pl_PL.properties
@@ -1,4 +1,4 @@
-quickbook.booktickets=Kup bilet
+quickbook.booktickets=Rezerwuj bilety
 quickbook.bycinema=KINA
 quickbook.bydate=DATA
 quickbook.byfilm=FILM
